--- a/myapp/package.json
+++ b/myapp/package.json
@@ -37,6 +37,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hot-loader": "^4.13.0"
+    "react-hot-loader": "^4.13.0",
+    "react-router-dom": "^5.3.0"
   }
 }
