--- a/myapp/package.json
+++ b/myapp/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "axios": "^0.26.1",
     "firebase": "^9.6.9",
     "fontsource-roboto": "^4.0.0",
     "moment": "^2.29.1",
