--- a/myapp/package.json
+++ b/myapp/package.json
@@ -34,9 +34,11 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.26.1",
+    "express": "^4.17.3",
     "firebase": "^9.6.9",
     "fontsource-roboto": "^4.0.0",
     "moment": "^2.29.1",
+    "mongoose": "^6.2.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
