--- a/myapp/package.json
+++ b/myapp/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "react-router-dom": "^5.3.0",
+    "react-select": "^5.2.2",
     "styled-components": "^5.3.3"
   }
 }
