--- a/myapp/package.json
+++ b/myapp/package.json
@@ -34,6 +34,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.26.1",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "firebase": "^9.6.9",
     "fontsource-roboto": "^4.0.0",
