--- a/myapp/package.json
+++ b/myapp/package.json
@@ -31,8 +31,12 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.5.2",
+    "@mui/styled-engine-sc": "^5.5.2",
     "axios": "^0.26.1",
     "cors": "^2.8.5",
     "express": "^4.17.3",
@@ -40,11 +44,12 @@
     "fontsource-roboto": "^4.0.0",
     "moment": "^2.29.1",
     "mongoose": "^6.2.7",
+    "mui": "^0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "react-router-dom": "^5.3.0",
     "react-select": "^5.2.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.5"
   }
 }
